<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@android:color/white">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back" />
        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">
            <com.google.android.material.textfield.TextInputEditText
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_margin="8dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/colorGrey"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/forgot_password"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.BlogSample.LoginButton"
            android:textAllCaps="true"
            android:text="@string/sign_in" />
        <TextView
            android:padding="6dp"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="@color/colorGrey"
            android:textAllCaps="true"
            android:text="@string/or"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.BlogSample.LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/sign_in_with_twitter"
            app:icon="@drawable/ic_twitter"
            app:iconGravity="textStart"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.BlogSample.LoginButton"
            app:iconGravity="textStart"
            app:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_facebook"
            android:text="@string/sign_in_with_facebook"/>
        <LinearLayout
            android:layout_margin="12dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAllCaps="false"
                android:text="@string/sign_up"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
